--- a/EduMatch/package.json
+++ b/EduMatch/package.json
@@ -12,7 +12,8 @@
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
-    "expo": "~47.0.12",
+    "expo": "^47.0.13",
+    "expo-camera": "~13.1.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
